Maps and diagrams for biome M2

--- a/_EFGs/M2.2.md
+++ b/_EFGs/M2.2.md
@@ -23,14 +23,16 @@ The mesopelagic, dysphotic, or ‘twilight’ zone begins below the epipelagic l
 
 Global oceans from a depth of approximately 200 m, or where < 1% of light penetrates, down to 1000 m.
 
-{% capture map_det %}  {% endcapture %}
+{% capture map_det %} Indicative distributions of these marine pelagic ecosystem functional groups were derived from bathymetric spatial data obtained from Becker et al. (2009) using depth range thresholds cited in respective descriptive profiles for each functional group. {% endcapture %}
 {% include MAP.html %}
-## Map details
-
-Indicative distributions of these marine pelagic ecosystem functional groups were derived from bathymetric spatial data obtained from Becker et al. (2009) using depth range thresholds cited in respective descriptive profiles for each functional group.
 
 ## References
+
 ### Text references
-* Robinson C, Steinberg DK, Anderson TR, Aristegui J, Carlson CA, Frost JR, Ghiglione JF, Hernández-León S, Jackson GA, Koppelmann R (2010) Mesopelagic zone ecology and biogeochemistry – a synthesis. Deep-Sea Research II. 57: 1504-1518. / Sutton TT (2013) Vertical ecology of the pelagic ocean: Classical patterns and new perspectives. Journal of Fish Biology 83: 1508‐1527.
+
+* Robinson C, Steinberg DK, Anderson TR, Aristegui J, Carlson CA, Frost JR, Ghiglione JF, Hernández-León S, Jackson GA, Koppelmann R (2010) Mesopelagic zone ecology and biogeochemistry – a synthesis. Deep-Sea Research II. 57: 1504-1518.
+* Sutton TT (2013) Vertical ecology of the pelagic ocean: Classical patterns and new perspectives. Journal of Fish Biology 83: 1508‐1527.
+
 ### Map References
+
 * Becker JJ, Sandwell DT, Smith WHF, Braud J, Binder B, Depner J, Fabre D, Factor J, Ingalls S, Kim S-H, Ladner R, Marks K, Nelson S, Pharaoh A, Trimmer R, Von Rosenberg J, Wallace G, Weatherall P (2009) Global Bathymetry and Elevation Data at 30 Arc Seconds Resolution: SRTM30_PLUS, Marine Geodesy 32: 355-371.
