--- a/_EFGs/M2.4.md
+++ b/_EFGs/M2.4.md
@@ -24,19 +24,17 @@ No light penetrates from the ocean surface to abyssopelagic waters. Nutrient con
 
 # Distribution
 
-
 All oceans and  deepest parts of the Mediterranean Sea  beyond the continental slope, mid-ocean ridges and plateaus between depths of 3000 to 6000m.
 
-
-## Map details
-
-Indicative distributions of these marine pelagic ecosystem functional groups were derived from bathymetric spatial data obtained from Becker et al. (2009) using depth range thresholds cited in respective descriptive profiles for each functional group.
-
-{% capture map_det %}  {% endcapture %}
+{% capture map_det %} Indicative distributions of these marine pelagic ecosystem functional groups were derived from bathymetric spatial data obtained from Becker et al. (2009) using depth range thresholds cited in respective descriptive profiles for each functional group. {% endcapture %}
 {% include MAP.html %}
 
 ## References
+
 ### Text references
+
 * Priede, IG (2017) Deep-sea fishes: Biology, diversity, ecology and fisheries. Chapter 1. Cambridge University Press, Cambridge. doi:10.1017/9781316018330
+
 ### Map References
+
 * Becker JJ, Sandwell DT, Smith WHF, Braud J, Binder B, Depner J, Fabre D, Factor J, Ingalls S, Kim S-H, Ladner R, Marks K, Nelson S, Pharaoh A, Trimmer R, Von Rosenberg J, Wallace G, Weatherall P (2009) Global Bathymetry and Elevation Data at 30 Arc Seconds Resolution: SRTM30_PLUS, Marine Geodesy 32: 355-371.
