Maps and references for biome M3

--- a/_EFGs/M3.1.md
+++ b/_EFGs/M3.1.md
@@ -23,15 +23,15 @@ The continental slopes are characterised by strong environmental depth gradients
 
 Fringing the margins of all ocean basins and oceanic islands. Extending beneath 11% of the ocean surface between depths of 250 and 4000 m.
 
-## Map details
-
-The indicative map of Continental and island slopes was based on the ‘slope’ geomorphic unit of Harris et al. (2014).
-
-{% capture map_det %}  {% endcapture %}
+{% capture map_det %} The indicative map of Continental and island slopes was based on the ‘slope’ geomorphic unit of Harris et al. (2014). {% endcapture %}
 {% include MAP.html %}
 
 ## References
+
 ### Text references
+
 * Menot L, Sibuet M, Carney RS, Levin LA, Rowe GT, Billett DSM et al. (2010) New perceptions of continental margin biodiversity. In: ’Life in the world’s oceans: diversity, distribution and abundance’ (Ed. AD McIntyre), Chapter 5, pp 79-101. Blackwell, Chichester.
+
 ### Map References
+
 * Harris PT, Macmillan-Lawler M, Rupp J, Baker EK (2014) Geomorphology of the oceans. Marine Geology 352: 4-24.
