--- a/_EFGs/M3.2.md
+++ b/_EFGs/M3.2.md
@@ -23,15 +23,15 @@ Submarine canyons vary in their origin, length, depth range (mean 2000 m), hydro
 
 Submarine canyons cover 11.2% of continental slopes, with 9000 large canyons recorded globally. Most of their extent is distributed below 200 m, with a mean depth of 2000 m.
 
-## Map details
-
-The indicative map of Submarine canyons was based on the ‘canyons’ geomorphic unit of Harris et al. (2014).
-
-{% capture map_det %}  {% endcapture %}
+{% capture map_det %} The indicative map of Submarine canyons was based on the ‘canyons’ geomorphic unit of Harris et al. (2014). {% endcapture %}
 {% include MAP.html %}
 
 ## References
+
 ### Text references
+
 * Fernandez-Arcaya U, Ramirez-Llodra E, Aguzzi J, Allcock AL, Davies JS et al. (2017) Ecological role of submarine canyons and need for canyon conservation: a review. Frontiers in Marine Science 4: 5.
+
 ### Map References
+
 * Harris PT, Macmillan-Lawler M, Rupp J, Baker EK (2014) Geomorphology of the oceans. Marine Geology 352: 4-24.
