--- a/_EFGs/M3.3.md
+++ b/_EFGs/M3.3.md
@@ -23,15 +23,15 @@ No light penetrates to abyssal depths. Hydrostatic pressure is very high (300-60
 
 Seafloor of all oceans between 3000 and 6000 m depth, accounting for 76% of the total seafloor area, segmented by mid-ocean ridges, island arcs and trenches.
 
-## Map details
-
-The indicative map of Abyssal plains was based on the ‘plains’ and ‘hills’ classes within the abyssal geomorphic unit of Harris et al. (2014).
-
-{% capture map_det %}  {% endcapture %}
+{% capture map_det %} The indicative map of Abyssal plains was based on the ‘plains’ and ‘hills’ classes within the abyssal geomorphic unit of Harris et al. (2014). {% endcapture %}
 {% include MAP.html %}
 
 ## References
+
 ### Text references
+
 * Smith CR, De Leo FC, Bernardino AF, Sweetman AK, Martinez Arbizu P (2008) Abyssal food limitation, ecosystem structure and climate change. Trends in Ecology and Evolution 23: 518-528.
+
 ### Map References
+
 * Harris PT, Macmillan-Lawler M, Rupp J, Baker EK (2014) Geomorphology of the oceans. Marine Geology 352: 4-24.
