--- a/_EFGs/M3.4.md
+++ b/_EFGs/M3.4.md
@@ -23,15 +23,16 @@ Seamounts, rising more than 1000 m above the sediment-covered seabed, and smalle
 
 About 171000 seamounts, knolls and hills documented so far worldwide cover c. 2.6% of the seafloor. Ridges cover about 9.2% of the seafloor, along a semi-continuous system 55,000 km long.
 
-## Map details
-
-The indicative map of Seamounts, ridges and plateaus was based on the ‘seamounts’, ‘ridges’ and ‘plateaus’ geomorphic units of Harris et al. (2014).
-
-{% capture map_det %}  {% endcapture %}
+{% capture map_det %} The indicative map of Seamounts, ridges and plateaus was based on the ‘seamounts’, ‘ridges’ and ‘plateaus’ geomorphic units of Harris et al. (2014). {% endcapture %}
 {% include MAP.html %}
 
 ## References
+
 ### Text references
-* Rogers AD (2018) The Biology of Seamounts: 25 Years on. Advances in Marine Biology 79:137-224. doi: 10.1016/bs.amb.2018.06.001 / Schlacher A, Rowden AA, Dower JF, Consalvey M (2010) Recent advances in seamount ecology: A contribution to the Census of Marine Life. Marine Ecology (special issue) 31: 1-241.
+
+* Rogers AD (2018) The Biology of Seamounts: 25 Years on. Advances in Marine Biology 79:137-224. doi: 10.1016/bs.amb.2018.06.001
+* Schlacher A, Rowden AA, Dower JF, Consalvey M (2010) Recent advances in seamount ecology: A contribution to the Census of Marine Life. Marine Ecology (special issue) 31: 1-241.
+
 ### Map References
+
 * Harris PT, Macmillan-Lawler M, Rupp J, Baker EK (2014) Geomorphology of the oceans. Marine Geology 352: 4-24.
