--- a/_EFGs/M3.5.md
+++ b/_EFGs/M3.5.md
@@ -15,9 +15,7 @@ Benthic, sessile suspension-feeders such as aphotic corals, sponges and bivalves
 
 # Key-ecological-drivers
 
-
 The productivity of surface water, vertical flux of nutrients, water temperature and hydrography influence the availability of food, and hence the distribution and function of deepwater biogenic beds. Although these systems occur on both hard and soft substrates, the latter are less structurally complex and hence less diverse. Chemical processes are important and ocean acidity is limiting: the presence of cold water corals for example has been strongly linked to the aragonite saturation depth. Habitat-forming species prefer regions characterised by oxygenation and currents or high flow, and are generally not found in oxygen-minimum zones. Benthic biogenic structures and their dependents are highly dependent on low levels of physical disturbance due to slow growth rates and recovery times of the structural dominants.
-
 
 # Diagramatic assembly model
 
@@ -25,19 +23,18 @@ The productivity of surface water, vertical flux of nutrients, water temperature
 
 # Distribution
 
-
  Patchy but widespread distribution across the deep sea floor below 250m depth. Poorly explored and possibly less common on abyssal plains.
 
-
-## Map details
-
-The indicative map of Deepwater biogenic beds was based on the ‘mountains’ and ‘hills’ classes within the abyssal geomorphic unit of of Harris et al. (2014). These were mapped in yellow as minor occurrences to acknowledges considerable uncertainties in the distribution of biogenic beds within these geomorphic units.
-
-{% capture map_det %}  {% endcapture %}
+{% capture map_det %} The indicative map of Deepwater biogenic beds was based on the ‘mountains’ and ‘hills’ classes within the abyssal geomorphic unit of of Harris et al. (2014). These were mapped in yellow as minor occurrences to acknowledges considerable uncertainties in the distribution of biogenic beds within these geomorphic units. {% endcapture %}
 {% include MAP.html %}
 
 ## References
+
 ### Text references
-* Buhl‐Mortensen L, Vanreusel A, Gooday AJ et al. (2010) Biological structures as a source of habitat heterogeneity and biodiversity on the deep ocean margins. Marine Ecology 31: 21-50. / Rossi S, Bramanti L, Gori, A, Orejas C, (2017) Marine Animal Forests: The Ecology of Benthic Biodiversity Hotspots. Springer, Berlin.
+
+* Buhl‐Mortensen L, Vanreusel A, Gooday AJ et al. (2010) Biological structures as a source of habitat heterogeneity and biodiversity on the deep ocean margins. Marine Ecology 31: 21-50.
+* Rossi S, Bramanti L, Gori, A, Orejas C, (2017) Marine Animal Forests: The Ecology of Benthic Biodiversity Hotspots. Springer, Berlin.
+
 ### Map References
+
 * Harris PT, Macmillan-Lawler M, Rupp J, Baker EK (2014) Geomorphology of the oceans. Marine Geology 352: 4-24.
