--- a/_EFGs/M3.6.md
+++ b/_EFGs/M3.6.md
@@ -9,12 +9,9 @@ contributors: E Ramirez-Llodra / AA Rowden / AJ Jamieson / DA Keith
 
 # Ecological traits
 
-
 Hadal zones are the deepest ocean systems on earth and among the least explored. They are heterotrophic, with energy derived from fallout of particulate organic matter (POM flux) through the water column, which varies seasonally and geographically, and accumulates in the deepest axes of the trenches. Most organic matter reaching hadal depths is nutrient-poor because pelagic organisms use the labile compounds from the POM during the fall to the deep seafloor. Hadal systems are therefore food-limited, but POM flux may be boosted by sporadic pulses (e.g. whale falls, wood falls), and sediment transported by advection and seismically induced submarine landslides. Additional energy is contributed by chemosynthetic bacteria communities that can establish symbiotic relationships with specialised fauna. These are poorly known but more are expected to be discovered in the future. Hadal trophic networks are dominated by scavengers and detritivores, although predators (including cannibalism) are also represented. Over 400 species are currently known from hadal ecosystems, with most metazoan taxa represented including amphipods, polychaetes, gastropods, bivalves and holothurians, as well as fish. These possess physiological adaptations to high hydrostatic pressure, darkness, low temperature and low food supply. These environmental filters, together with habitat isolation, result in high levels of species endemism. Gigantism in amphipods, mysids and isopods contrasts with the dwarfism in meiofauna (nematodes, copepods, kinorhynchs).
 
-
 # Key-ecological-drivers
-
 
 The hadal benthic zone extends from 6,000 to 11,000 m depth and includes 27 disjunct deep-ocean trenches, 13 troughs and 7 faults. Sunlight is absent, nutrients and organic carbon are scarce and hydrostatic pressure is extremely high (600-1100 atm). The water masses in trenches and troughs are well oxygenated by deep currents and experience constantly low temperatures (1.5-2.5 °C). Rocky substrates outcrop on steep slopes of trenches and faults, while the floors comprise large accumulations of very fine sediment deposited by mass movement, including drift and landslides, which are important sources of organic matter.
 
@@ -22,24 +19,18 @@ The hadal benthic zone extends from 6,000 to 11,000 m depth and includes 27 disj
 
 {% include DAM.html %}
 
-
 # Distribution
-
 
 A cluster of isolated trenches in subduction zones, faults  and troughs/basins, mostly in the Pacific Ocean, as well as Indian and Southern oceans, accounting for 1-2% of the total global benthic area
 
-
-## Map details
-
-The indicative map of Hadal trenches and troughs was based on the ‘hadal’ and ‘trenches’ geomorphic units of Harris et al. (2014).
-
-{% capture map_det %}  {% endcapture %}
+{% capture map_det %} The indicative map of Hadal trenches and troughs was based on the ‘hadal’ and ‘trenches’ geomorphic units of Harris et al. (2014). {% endcapture %}
 {% include MAP.html %}
 
-
 ## References
+
 ### Text references
-* Jamieson A, Fujii T, Mayor DJ, Solan M, Priede IG (2010) Hadal trenches: the ecology of the deepest places on Earth. Trends in Ecology and Evolution, 25: 190-197. / Stewart HA, Jamieson AJ (2018) Habitat heterogeneity of hadal trenches: considerations and implications for future studies. Progress in Oceanography 161: 47-65.
+* Jamieson A, Fujii T, Mayor DJ, Solan M, Priede IG (2010) Hadal trenches: the ecology of the deepest places on Earth. Trends in Ecology and Evolution, 25: 190-197.
+* Stewart HA, Jamieson AJ (2018) Habitat heterogeneity of hadal trenches: considerations and implications for future studies. Progress in Oceanography 161: 47-65.
 
 ### Map References
 * Harris PT, Macmillan-Lawler M, Rupp J, Baker EK (2014) Geomorphology of the oceans. Marine Geology 352: 4-24.
