--- a/_EFGs/M3.7.md
+++ b/_EFGs/M3.7.md
@@ -23,15 +23,15 @@ No light penetrates to deep-sea CBEs. Hydrostatic pressure is very high (30-600 
 
 Seafloor of all oceans. Vents (map) occur on mid-ocean ridges, back arc basins and active seamounts. Cold seeps occur on active and passive continental margins. Food-falls occur mostly along cetacean migration routes (whale falls).
 
-## Map details
-
-The indicative map of Chemosynthetic-based ecosystems was based on the distribution of hydrothermal vents on spreading plate boundaries  mapped in ‘Plate lines and polygons’ data by USGS/ESRI. Distribution of cold seeps is poorly known and not mapped.
-
-{% capture map_det %}  {% endcapture %}
+{% capture map_det %} The indicative map of Chemosynthetic-based ecosystems was based on the distribution of hydrothermal vents on spreading plate boundaries  mapped in ‘Plate lines and polygons’ data by USGS/ESRI. Distribution of cold seeps is poorly known and not mapped. {% endcapture %}
 {% include MAP.html %}
 
 ## References
+
 ### Text references
+
 * Tunnicliffe V, Juniper KS, Sibuet M (2003) Reducing environments of the deep-sea floor. In: Tyler PA (ed) Ecosystems of the World Vol 28 Ecosystems of the deep oceans, pp 81-110. Elsevier, London.
+
 ### Map References
+
 * ‘Plate lines and polygons’ data by USGS/ESRI (https://www.arcgis.com/home/item.html?id=f155b76c13c84f62864446847f1ae652, downloaded 5/5/2019)
