adding map template to profiles

--- a/_EFGs/M4.1.md
+++ b/_EFGs/M4.1.md
@@ -23,15 +23,17 @@ Millions of artificial reefs and FADs are deployed in coastal waters throughout 
 
 {% include DAM.html %}
 
-## Map details
-
-Marine ecoregions that include occurrences of Submerged artificial structures (M4.1) were identified by overlaying a mapped distribution of shipwrecks (Monfils 2004) on marine ecoregions (Spalding et al. 2008). To represent uncertainty, indicative distributions were mapped in yellow.
-
-{% capture map_det %}  {% endcapture %}
+{% capture map_det %} Marine ecoregions that include occurrences of Submerged artificial structures were identified by overlaying a mapped distribution of shipwrecks (Monfils 2004) on marine ecoregions (Spalding et al. 2008). To represent uncertainty, indicative distributions were mapped in yellow. {% endcapture %}
 {% include MAP.html %}
 
 ## References
+
 ### Text references
-* Champion C, Suthers IM, Smith JA (2015) Zooplanktivory is a key process for fish production on a coastal artificial reef. Marine Ecology Progress Series 541:1-14. / Claisse JT, Pondella DJ, Love M, Zahn LA, Williams CM, Williams JP, Bull AS (2014) Oil platforms off California are among the most productive marine fish habitats globally. Proc Natl Acad Sci. USA 111:15462–15467.
+
+* Champion C, Suthers IM, Smith JA (2015) Zooplanktivory is a key process for fish production on a coastal artificial reef. Marine Ecology Progress Series 541:1-14.
+* Claisse JT, Pondella DJ, Love M, Zahn LA, Williams CM, Williams JP, Bull AS (2014) Oil platforms off California are among the most productive marine fish habitats globally. Proc Natl Acad Sci. USA 111:15462–15467.
+
 ### Map References
-* Spalding MD et al. (2008) Marine ecoregions of the world: a bioregionalization of coastal and shelf areas. Bioscience 57: 573–583. / Monfils R (2004) The global risk of marine pollution from WWII shipwrecks:  Examples from the Seven Seas. Sea Australia, Civic. [http://www.seaaustralia.com/documents/The%20Global%20Risk%20of%20Marine%20Pollution%20from%20WWII%20Shipwrecks-final.pdf]
+
+* Spalding MD et al. (2008) Marine ecoregions of the world: a bioregionalization of coastal and shelf areas. Bioscience 57: 573–583.
+* Monfils R (2004) The global risk of marine pollution from WWII shipwrecks:  Examples from the Seven Seas. Sea Australia, Civic. [http://www.seaaustralia.com/documents/The%20Global%20Risk%20of%20Marine%20Pollution%20from%20WWII%20Shipwrecks-final.pdf]
