--- a/_EFGs/M4.2.md
+++ b/_EFGs/M4.2.md
@@ -23,15 +23,16 @@ Most marine farms are in sheltered coastal waters, but some are in the open ocea
 
 Rapidly expanding around coastal Asia, Europe, North and Meso America, and southern temperate regions. Open ocean facilities near Hawaii and Puerto Rico
 
-## Map details
-
-Marine ecoregions (Spalding et al. 2008) containing Marine aquafarms were identified by consulting global and regional reviews, suitability maps (Gentry et al. 2017), and expertise of authors. These were clipped to the extent of the marine ‘shelf’ base layer as mapped by Harris et al. (2014).
-
-{% capture map_det %}  {% endcapture %}
+{% capture map_det %} Marine ecoregions (Spalding et al. 2008) containing Marine aquafarms were identified by consulting global and regional reviews, suitability maps (Gentry et al. 2017), and expertise of authors. These were clipped to the extent of the marine ‘shelf’ base layer as mapped by Harris et al. (2014). {% endcapture %}
 {% include MAP.html %}
 
 ## References
+
 ### Text references
+
 * Beveridge M (2008). Cage Aquaculture. Wiley, Oxford.
+
 ### Map References
-* Spalding MD et al. (2008) Marine ecoregions of the world: a bioregionalization of coastal and shelf areas. Bioscience 57: 573–583. / Harris PT, Macmillan-Lawler M, Rupp J, Baker EK (2014) Geomorphology of the oceans. Marine Geology 352: 4-24. / Gentry RR, Froehlich HE, Grimm D, Kareiva P, Parke M, Rust M, Gaines SD, Halpern BS (2017) Mapping the global potential for marine aquaculture. Nature Ecology & Evolution 1: 1317–1324.
+* Spalding MD et al. (2008) Marine ecoregions of the world: a bioregionalization of coastal and shelf areas. Bioscience 57: 573–583.
+* Harris PT, Macmillan-Lawler M, Rupp J, Baker EK (2014) Geomorphology of the oceans. Marine Geology 352: 4-24.
+* Gentry RR, Froehlich HE, Grimm D, Kareiva P, Parke M, Rust M, Gaines SD, Halpern BS (2017) Mapping the global potential for marine aquaculture. Nature Ecology & Evolution 1: 1317–1324.
