--- a/_EFGs/S2.1.md
+++ b/_EFGs/S2.1.md
@@ -24,7 +24,8 @@ Excavations associated with tunnels, vaults and mines. While some are abandoned,
 
 Scattered worldwide, but mostly associated with urban centres, transit corridors and industrial mines.
 
-## Map details
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
 
 ?
 
