--- a/_EFGs/T1.4.md
+++ b/_EFGs/T1.4.md
@@ -23,7 +23,8 @@ These forests experience an overall water surplus, but productivity is limited b
 
 Scattered through northwest and west Amazonia and southeast Asia, most notably in the Rio Negro catchment and southern Kalimantan. Not known from Africa, but possibly in the Congo region.
 
-## Map details
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
 
 Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews (cited in respective reference sections of profiles), maps of relevant ecosystems, and experts.
 
