--- a/_EFGs/T2.2.md
+++ b/_EFGs/T2.2.md
@@ -27,8 +27,8 @@ contributors: DA Keith / NA Brummitt / F Essl / D Faber-Langendoen,
 
 Cool temperate Europe (southwest Russia to British Isles), northeast Asia (northeast China, southern Siberia Korea, Japan) northeast America. Limited occurrences in warm temperate zones of south Europe and Asia, and midwest USA.
 
-
-## Map details
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
 
 Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews (cited in respective reference sections of profiles), maps of relevant ecosystems, and experts.
 
