--- a/_EFGs/T2.3.md
+++ b/_EFGs/T2.3.md
@@ -24,7 +24,8 @@ There is a large overall water surplus, rarely with summer deficits. Rainfall is
 
 Cool temperate coasts of Chile and Patagonia, New Zealand, Tasmania and Pacific northwest, rarely extending to warm temperate latitudes on mountains in Chile, southeast Australia and outliers above 2500 m elevation in the New Guinea highlands. Some authors extend the concept to wet boreal forests on coasts of northwest Europe, Japan and northeast Canada.
 
-## Map details
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
 
 Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.
 
