--- a/_EFGs/T2.5.md
+++ b/_EFGs/T2.5.md
@@ -23,7 +23,8 @@ There is an annual water surplus, but with seasonal variation (peak surplus in w
 
 Temperate southeast and southwest Australia.
 
-## Map details
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
 
 Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews (cited in respective reference sections of profiles), maps of relevant ecosystems, and experts.
 
