--- a/_EFGs/T4.3.md
+++ b/_EFGs/T4.3.md
@@ -23,7 +23,8 @@ Large overall rainfall deficit up to c. 2000mm, always with a seasonal (winter) 
 
 Rocky areas of the seasonal Australian tropics extending to the semi-arid zone.
 
-## Map details
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
 
 Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.
 
