--- a/_EFGs/T4.4.md
+++ b/_EFGs/T4.4.md
@@ -23,7 +23,8 @@ A water deficit occurs seasonally in summer, driven primarily by peak evapotrans
 
 Temperate southeast and southwest Australia, Patagonia and Pampas of South America, western and eastern North America, the Mediterranean region and temperate Eurasia.
 
-## Map details
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
 
 Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.
 
