--- a/_EFGs/T5.1.md
+++ b/_EFGs/T5.1.md
@@ -23,7 +23,8 @@ Semi-desert steppes is associated with fine-textured, non-acid soils of low-mode
 
 Extensive areas across the Sahara, Arabian Peninsula and west Asia, southwest Africa, southern Australia, Argentina and midwest USA.
 
-## Map details
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
 
 TEOW
 
