--- a/_EFGs/T5.2.md
+++ b/_EFGs/T5.2.md
@@ -28,7 +28,8 @@ These systems occur in subtropical arid climates with large overall water defici
 Mostly subtropical latitudes in the Americas, southern Africa and southern Asia.
 
 
-## Map details
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
 
 Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.
 
