--- a/_EFGs/T5.4.md
+++ b/_EFGs/T5.4.md
@@ -23,7 +23,8 @@ Mean annual precipitation is similar to most warm deserts (<250mm) due to rainsh
 
 Cool temperate plains and plateaus from sea level to 4000m elevation in central Eurasia, western North America, Patagonia. Extreme cold deserts are placed in the polar/alpine biome.
 
-## Map details
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
 
 Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.
 
