--- a/_EFGs/T5.5.md
+++ b/_EFGs/T5.5.md
@@ -23,7 +23,8 @@ Extreme rainfall deficit arising from very low rainfall (150mm to almost zero an
 
 Driest parts of the Sahara-Arabian, Atacama and Namib deserts in subtropical latitudes.
 
-## Map details
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
 
 Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.
 
