--- a/_EFGs/T6.1.md
+++ b/_EFGs/T6.1.md
@@ -23,7 +23,8 @@ Permanent but dynamic ice cover accumulates by periodic snow fall and is reduced
 
 Polar regions and high mountains in the western Americas, central Asia, Europe and New Zealand, covering approximately 10% of Earth's surface.
 
-## Map details
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
 
 Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.
 
