--- a/_EFGs/T6.4.md
+++ b/_EFGs/T6.4.md
@@ -23,7 +23,8 @@ Winters are long and cold, while summers are short and mild. Seasonal snow up to
 
 Mountains in the temperate and boreal zones of the Americas, Europe, central Eurasia, west and north Asia, Australia and New Zealand.
 
-## Map details
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
 
 Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.
 
