--- a/_EFGs/T6.5.md
+++ b/_EFGs/T6.5.md
@@ -28,8 +28,8 @@ Cold nights (as low as -10°C) and mild days (up to 15°C) produce low mean temp
 
 Restricted mountain areas of tropical Central and South America, east and west Africa and southeast Asia.
 
-
-## Map details
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
 
 Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.
 
