--- a/_EFGs/T7.1.md
+++ b/_EFGs/T7.1.md
@@ -23,7 +23,8 @@ High to moderate natural availability of water (from at least seasonally high ra
 
 Tropical to temperate humid climatic zones or river flats in dry climates across south sub-Saharan and far north Africa, Europe, Asia, southern and southwestern Australasia, Oceania and the Americas.
 
-## Map details
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
 
 The indicative distribution of crop lands was estimated using the percentage cover of crop lands at 5' resolution from the Hyde 3.1 dataset (Klein Goldewijk & van Drecht 2006), with a threshold of 1% for minor occurrences and 10% for major occurrences.
 
