--- a/_EFGs/T7.4.md
+++ b/_EFGs/T7.4.md
@@ -23,7 +23,8 @@ Humans influence availability of water, nutrients and energy deterministically t
 
 Extensively scattered through equatorial to subpolar latitudes from sea-level to submontane altitudes, mostly in proximity to the coast, rivers or lakes, especially north America, western Europe and Japan, as well as India, China and Brazil.
 
-## Map details
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
 
 The indicative distribution of Urban and infrastructure lands was estimated using spatial data for night light brightness (NCEI 2019; Cinzano, Falchi & Elvidge 2019)
 
