--- a/_EFGs/S1.1.md
+++ b/_EFGs/S1.1.md
@@ -23,7 +23,8 @@ Most caves form from chemical weathering of limestone or gypsum, either epigenic
 
 Scattered worldwide, but mostly northern hemisphere, in limestones (map), basalt flows and rarely other lithic substrates.
 
-## Map details
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
 
 Distributions of Aerobic caves were based on mapped area of carbonate rock outcrop (Williams & Ting Fong 2016). This. provides an upper limit on the area of exposed karst terrain, as not all carbonate rocks are karstified. Lava tubes and other rocks that may contain these ecosystem functional groups are not shown on this indicative map, but are less extensive than those in carbonate rock.
 
