--- a/_EFGs/T1.1.md
+++ b/_EFGs/T1.1.md
@@ -23,7 +23,8 @@ Precipitation exceeds evapotranspiration with low intra- and inter-annual variab
 
 Humid tropical and subtropical regions in central and west Africa, southeast Asia, Oceania, northeast Australia, central and tropical south America and the Caribbean.
 
-## Map details
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
 
 Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews (cited in respective reference sections of profiles), maps of relevant ecosystems, and experts.
 
