--- a/_EFGs/T1.2.md
+++ b/_EFGs/T1.2.md
@@ -23,7 +23,8 @@ Overall water surplus (or small deficit<100 mm), but a substantial seasonal defi
 
 Seasonally dry tropical and subtropical regions in central and west Africa, Madagascar, southern Asia, north and northern and eastern Australia, the Pacific, central and south America and the Caribbean.
 
-## Map details
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
 
 Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews (cited in respective reference sections of profiles), maps of relevant ecosystems, and experts.
 
