--- a/_EFGs/T1.3.md
+++ b/_EFGs/T1.3.md
@@ -23,7 +23,8 @@ Substantial cloud moisture and high humidity underpin a reliable year-round rain
 
 Humid tropical and subtropical regions in east Africa, east Madagascar, southeast Asia, west Oceania, northeast Australia, central and tropical south America.
 
-## Map details
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
 
 Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews (cited in respective reference sections of profiles), maps of relevant ecosystems, and experts.
 
