--- a/_EFGs/T2.4.md
+++ b/_EFGs/T2.4.md
@@ -23,7 +23,8 @@ The environmental niche of these forests is defined by a modest overall water su
 
 Patchy warm temperate distribution 26-43° latitude, north or south of the Equator (east Asia, southeast Australia, New Zealand, southeast USA, Mexico, central Chile, South Africa and the Azores).
 
-## Map details
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
 
 Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews (cited in respective reference sections of profiles), maps of relevant ecosystems, and experts.
 
