--- a/_EFGs/T2.6.md
+++ b/_EFGs/T2.6.md
@@ -23,7 +23,8 @@ Hot summers generate a marked but variable summer water deficit, usually with a 
 
 Temperate regions of Australia, the Mediterranean and central California.
 
-## Map details
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
 
 Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews (cited in respective reference sections of profiles), maps of relevant ecosystems, and experts.
 
