--- a/_EFGs/T3.1.md
+++ b/_EFGs/T3.1.md
@@ -23,7 +23,8 @@ A severe seasonal climatic water deficit during tropical 'winter' months is exac
 
 Brazilian campos rupestres, Venezuelan tepui, Florida sands and scattered in northern Australia and montane oceanic islands.
 
-## Map details
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
 
 Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.
 
