--- a/_EFGs/T3.2.md
+++ b/_EFGs/T3.2.md
@@ -23,7 +23,8 @@ A marked summer water deficit and a modest winter surplus is driven by high summ
 
 Mediterranean-type climate regions of Europe, north and south Africa, southern Australia, western North and South America, and occurrences in non-Mediterranean climates in eastern Australia, USA and Argentina.
 
-## Map details
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
 
 Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.
 
