--- a/_EFGs/T3.3.md
+++ b/_EFGs/T3.3.md
@@ -23,7 +23,8 @@ Unlike most other heathlands, these ecosystems have an overall water surplus, th
 
 Boreal and cool temperate coasts of western Europe and America, Azores, Magellanic region of South America, mostly at latitudes >40° latitude except where transitional with warm temperate heaths (e.g. France-Spain).
 
-## Map details
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
 
 Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.
 
