--- a/_EFGs/T3.4.md
+++ b/_EFGs/T3.4.md
@@ -23,7 +23,8 @@ Skeletal substrates (e.g. lava pavements, scree slopes, rock outcrops) limit wa
 
 Localised areas scattered around the Pacific rim, African Rift Valley, Mediterranean and north Atlantic.
 
-## Map details
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
 
 Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.
 
