--- a/_EFGs/T4.1.md
+++ b/_EFGs/T4.1.md
@@ -23,7 +23,8 @@ Trophic savannas like pyric savannas are driven by seasonal climates, but genera
 
 Seasonal tropics and subtropics of Africa and Asia.
 
-## Map details
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
 
 Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.
 
