--- a/_EFGs/T4.2.md
+++ b/_EFGs/T4.2.md
@@ -23,7 +23,8 @@ An overall rainfall deficit up to c. 1200mm or a modest surplus of up to 500mm, 
 
 Seasonally dry tropics and subtropics of the Americas, Australia, Asia and Africa.
 
-## Map details
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
 
 Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.
 
