--- a/_EFGs/T5.3.md
+++ b/_EFGs/T5.3.md
@@ -28,8 +28,8 @@ Resource availability is limited by a large overall water deficit (rainfall <250
 
 Mid latitudes on sandy substrates of central and northwestern Australia.
 
-
-## Map details
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
 
 Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.
 
