--- a/_EFGs/T6.2.md
+++ b/_EFGs/T6.2.md
@@ -23,7 +23,8 @@ Extremely cold winters with wind-chill that may reduce temperatures below -80°C
 
 Permanently ice-free areas of Antarctica, Greenland, the Arctic circle, and high mountains in the western Americas, central Asia, Europe, Africa and New Zealand.
 
-## Map details
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
 
 Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.
 
