--- a/_EFGs/T6.3.md
+++ b/_EFGs/T6.3.md
@@ -23,7 +23,8 @@ Winters are very cold and dark and summers define short, cool growing seasons wi
 
 Primarily the within Arctic Circle and adjacent Subarctic regions, with smaller occurrences on Subantarctic islands and the Antarctic coast.
 
-## Map details
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
 
 Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.
 
