--- a/_EFGs/T7.2.md
+++ b/_EFGs/T7.2.md
@@ -23,7 +23,8 @@ High to moderate natural availability of water (from rainfall) and nutrients (fr
 
 Mostly in subtropical to temperate climatic zones and developed countries across Europe, east and south Asia, subtropical and temperate Africa, southern Australasia, north and central America and temperate south America.
 
-## Map details
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
 
 Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.
 
