maps and references for subterranean realm, is something missing?

--- a/_EFGs/S1.2.md
+++ b/_EFGs/S1.2.md
@@ -24,16 +24,10 @@ Endolithic systems are characterised by a lack of light, scarcity of nutrients a
 
 # Distribution
 
-
-Throughout the earth's crust, from surface rocks to a predicted depth of up to 4-4.5 km below the land surface and 7-7.5 km below ocean floors.
-
-
-## Map details
-
-Global distribution throughout the earth's crust.
+Throughout the earth's crust, from surface rocks to a predicted depth of up to 4-4.5 km below the land surface and 7-7.5 km below ocean floors. (Not mapped).
 
 ## References
+
 ### Text references
+
 * Edwards KJ, Becker K, Colwell F (2012). The deep, dark energy biosphere: intraterrestrial life on earth. Annual Review of Earth and Planetary Sciences 40, 551–568.
-### Map References
-*
