--- a/_EFGs/S2.1.md
+++ b/_EFGs/S2.1.md
@@ -24,13 +24,12 @@ Excavations associated with tunnels, vaults and mines. While some are abandoned,
 
 Scattered worldwide, but mostly associated with urban centres, transit corridors and industrial mines.
 
-{% capture map_det %}  {% endcapture %}
+{% capture map_det %} ? {% endcapture %}
 {% include MAP.html %}
 
-?
-
 ## References
+
 ### Text references
-* Gibert J, Deharveng L (2002) Subterranean ecosystems: a truncated functional biodiversity. BioScience 52: 473-481. / Engel AS (2010) Microbial diversity of cave ecosystems. In: Geomicrobiology: Molecular and environmental perspective (Eds. LL Barton, M Mandl, A Loy), pp219-238. Springer, Dordrecht.
-### Map References
-*
+
+* Gibert J, Deharveng L (2002) Subterranean ecosystems: a truncated functional biodiversity. BioScience 52: 473-481.
+* Engel AS (2010) Microbial diversity of cave ecosystems. In: Geomicrobiology: Molecular and environmental perspective (Eds. LL Barton, M Mandl, A Loy), pp219-238. Springer, Dordrecht.
