--- a/_EFGs/S1.1.md
+++ b/_EFGs/S1.1.md
@@ -23,13 +23,16 @@ Most caves form from chemical weathering of limestone or gypsum, either epigenic
 
 Scattered worldwide, but mostly northern hemisphere, in limestones (map), basalt flows and rarely other lithic substrates.
 
-{% capture map_det %}  {% endcapture %}
+{% capture map_det %} Distributions of Aerobic caves were based on mapped area of carbonate rock outcrop (Williams & Ting Fong 2016). This. provides an upper limit on the area of exposed karst terrain, as not all carbonate rocks are karstified. Lava tubes and other rocks that may contain these ecosystem functional groups are not shown on this indicative map, but are less extensive than those in carbonate rock. {% endcapture %}
 {% include MAP.html %}
 
-Distributions of Aerobic caves were based on mapped area of carbonate rock outcrop (Williams & Ting Fong 2016). This. provides an upper limit on the area of exposed karst terrain, as not all carbonate rocks are karstified. Lava tubes and other rocks that may contain these ecosystem functional groups are not shown on this indicative map, but are less extensive than those in carbonate rock.
-
 ## References
+
 ### Text references
-* Gibert J, Deharveng L (2002) Subterranean ecosystems: a truncated functional biodiversity. BioScience 52, 473-481. / Engel AS (2010) Microbial diversity of cave ecosystems. In: Geomicrobiology: Molecular and environmental perspective (Eds. LL Barton, M Mandl, A Loy), pp219-238. Springer, Dordrecht.
+
+* Gibert J, Deharveng L (2002) Subterranean ecosystems: a truncated functional biodiversity. BioScience 52, 473-481.
+* Engel AS (2010) Microbial diversity of cave ecosystems. In: Geomicrobiology: Molecular and environmental perspective (Eds. LL Barton, M Mandl, A Loy), pp219-238. Springer, Dordrecht.
+
 ### Map References
+
 * Williams P, Ting Fong Y (2016) World map of carbonate rock outcrops v3.0. The University of Auckland, Auckland. [https://www.fos.auckland.ac.nz/our_research/karst/]
