maps for biome T1

--- a/_EFGs/T1.2.md
+++ b/_EFGs/T1.2.md
@@ -23,16 +23,17 @@ Overall water surplus (or small deficit<100 mm), but a substantial seasonal defi
 
 Seasonally dry tropical and subtropical regions in central and west Africa, Madagascar, southern Asia, north and northern and eastern Australia, the Pacific, central and south America and the Caribbean.
 
-{% capture map_det %}  {% endcapture %}
+{% capture map_det %} Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews (cited in respective reference sections of profiles), maps of relevant ecosystems, and experts. {% endcapture %}
 {% include MAP.html %}
-
-Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews (cited in respective reference sections of profiles), maps of relevant ecosystems, and experts.
 
 ## References
 
 ### Text references
 
-* DRYFLOR, Banda-R K, Delgado-Salinas A, Dexter KG et al. (2016) Plant diversity patterns in neotropical dry forests and their conservation implications. Science 353:1383-1387. / Pennington RT, Lewis G, Ratter J (2006) Neotropical savannas and dry forests: plant diversity, biogeography and conservation.  CRC Press, Florida. / Murphy PG, Lugo AE (1986) Ecology of tropical dry forest. Ann. Rev. Ecol. Syst. 17:67–88. / Bunyavejchewin SC, Baker P, Davis SJ (2011) Seasonally dry tropical forests in continental southeast Asia - structure, composition, and dynamics. In: The ecology and conservation of seasonally dry forests in Asia. WJ McShea, SJ Davis, N Bhumpakphan, (Eds), pp. 9-35. Smithsonian Institution Scholarly Press, Washington DC.
+* DRYFLOR, Banda-R K, Delgado-Salinas A, Dexter KG et al. (2016) Plant diversity patterns in neotropical dry forests and their conservation implications. Science 353:1383-1387.
+* Pennington RT, Lewis G, Ratter J (2006) Neotropical savannas and dry forests: plant diversity, biogeography and conservation.  CRC Press, Florida.
+* Murphy PG, Lugo AE (1986) Ecology of tropical dry forest. Ann. Rev. Ecol. Syst. 17:67–88.
+* Bunyavejchewin SC, Baker P, Davis SJ (2011) Seasonally dry tropical forests in continental southeast Asia - structure, composition, and dynamics. In: The ecology and conservation of seasonally dry forests in Asia. WJ McShea, SJ Davis, N Bhumpakphan, (Eds), pp. 9-35. Smithsonian Institution Scholarly Press, Washington DC.
 
 ### Map References
 
