--- a/_EFGs/T1.3.md
+++ b/_EFGs/T1.3.md
@@ -23,16 +23,17 @@ Substantial cloud moisture and high humidity underpin a reliable year-round rain
 
 Humid tropical and subtropical regions in east Africa, east Madagascar, southeast Asia, west Oceania, northeast Australia, central and tropical south America.
 
-{% capture map_det %}  {% endcapture %}
+{% capture map_det %} Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews (cited in respective reference sections of profiles), maps of relevant ecosystems, and experts.
+ {% endcapture %}
 {% include MAP.html %}
 
-Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews (cited in respective reference sections of profiles), maps of relevant ecosystems, and experts.
 
 ## References
 
 ### Text references
 
-* Gradstein SR, Homeier J, Gansert D (2008) The tropical mountain forest – patterns and processes in a biodiversity hotspot. Biodiversity and Ecology Series 2. Göttingen, Centre for Biodiversity and Ecology. / Hamilton LS, Juvik JO, Scatena FN (1995) Tropical Montane Cloud Forests. Ecological Studies. 110. Springer-Verlag, Berlin.
+* Gradstein SR, Homeier J, Gansert D (2008) The tropical mountain forest – patterns and processes in a biodiversity hotspot. Biodiversity and Ecology Series 2. Göttingen, Centre for Biodiversity and Ecology.
+* Hamilton LS, Juvik JO, Scatena FN (1995) Tropical Montane Cloud Forests. Ecological Studies. 110. Springer-Verlag, Berlin.
 
 ### Map References
 
