--- a/_EFGs/T1.4.md
+++ b/_EFGs/T1.4.md
@@ -23,16 +23,16 @@ These forests experience an overall water surplus, but productivity is limited b
 
 Scattered through northwest and west Amazonia and southeast Asia, most notably in the Rio Negro catchment and southern Kalimantan. Not known from Africa, but possibly in the Congo region.
 
-{% capture map_det %}  {% endcapture %}
+{% capture map_det %} Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews (cited in respective reference sections of profiles), maps of relevant ecosystems, and experts. {% endcapture %}
 {% include MAP.html %}
-
-Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews (cited in respective reference sections of profiles), maps of relevant ecosystems, and experts.
 
 ## References
 
 ### Text references
 
-* Adeney JM, Christensen NL, Vicentini A, Cohn-Haft M (2016) White-sand ecosystems in Amazonia. Biotropica 48: 7–23. / Fortune C, Paine CET; Fine PVA, J. B. Kraft NJB, Baraloto C (2014) Environmental factors predict community functional composition in Amazonian forests. Journal of Ecology 102, 145-155.  / Miyamoto K, Rahajoe JS, Kohyama T (2007) Forest structure and primary productivity in a Bornean heath forest. Biotropica 39: 35–42.
+* Adeney JM, Christensen NL, Vicentini A, Cohn-Haft M (2016) White-sand ecosystems in Amazonia. Biotropica 48: 7–23.
+* Fortune C, Paine CET; Fine PVA, J. B. Kraft NJB, Baraloto C (2014) Environmental factors predict community functional composition in Amazonian forests. Journal of Ecology 102, 145-155.  
+* Miyamoto K, Rahajoe JS, Kohyama T (2007) Forest structure and primary productivity in a Bornean heath forest. Biotropica 39: 35–42.
 
 ### Map References
 
